# deeplearning_with_fastai

./: pyproject.toml
qmd/: fastai-01-image-classifier.ipynb  fastai-01-image-classifier.qmd  fastai_notes.qmd  pytorch_sandbox.qmd
