[tool.poetry]
name = "deeplearning-with-fastai"
version = "0.1.0"
description = ""
authors = ["Hendrik Wagenseil <hendrik.wagenseil@addium.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastai = "^2.7.13"
duckduckgo-search = "^4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
